--- a/styles.css
+++ b/styles.css
@@ -14,8 +14,7 @@
   padding: 0 15px 5px;
   }
 
-.navbar-inverse .navbar-nav .active a, .navbar-inverse .navbar-nav .active a:focus,
-    .navbar-inverse .navbar-nav .active a:hover {
+.navbar-inverse .navbar-nav .active a, .navbar-inverse .navbar-nav .active a:focus, .navbar-inverse .navbar-nav .active a:hover{
       color: #FFF;
       background-color: #5E4485;
       }
@@ -38,21 +37,48 @@ btn.{
   border: 2px solid #FFF;
 }
 
-@media (max-width: 600px) {
-  .carousel-caption {
-    display: none;
-  }
-  #icon {
-     max-width: 150px;
+.container {
+  margin: 4% auto;
 }
-  h2 {
-    font-size: 1.7em;
-  }
+
 #icon {
   max-width: 200px;
   margin: 1% auto;
 }
 
-.container {
-  margin: 4% auto;
+footer {
+  width: 100%;
+  background-color: #5E4485;
+  padding: 5%;
+  color: #FFF;
+}
+
+.fa {
+  padding: 15px;
+  font-size: 25px;
+  color: #FFF;
+}
+
+.fa:hover {
+  color: #D5D5D5;
+  text-decoration: none;
+}
+
+  @media (max-width: 900px) {
+    .fa {
+        font-size: 20px;
+        padding: 10px;
+    }
+
+  @media (max-width: 600px) {
+  .carousel-caption {
+    display: none;
+  }
+
+  #icon {
+     max-width: 150px;
+}
+
+h2 {
+  font-size: 1.7em;
 }
